test/error/sema/static-field-not-mutable.dsk
struct S
    let x = "value"
    y: int
end

let s = S(y = 1)
S.x = "new"
